# story_gen

./: .gitignore  README.md  pyproject.toml
ChatBotThing/: index.html
ChatBotThing/src/assets/styles/: styles.css
ChatBotThing/src/scripts/: main.js
agents/: langgraph.json  story_gen.py  story_gen2.py  summary_gen.ipynb
